//
//  AccessibilityIdentifier.swift
//  ImageFeedFun
//
//  Created by Захар Панченко on 23.03.2025.
//

struct IdentifierStruct {
    static let webViewAI = "UnsplashWebView"
    static let buttonLoginAI = "Authenticate"
    static let buttonLogoutAI = "logout button"
}
