...
     }
    
    func didTapLogoutButton() {
        
        // Создаем алерт с вопросом
        let alert = UIAlertController(
            title: "Пока, пока!",
            message: "Уверены, что хотите выйти?",
            preferredStyle: .alert
        )

        // Действие "Да"
        let yesAction = UIAlertAction(title: "Да", style: .default) {
            [weak self] _ in
            guard let self = self else { return }

            // Удаляем токен из Keychain
            let removeSuccessful: Bool = KeychainWrapper.standard.removeObject(
...
