...
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ymn-DF-cnL" userLabel="Like Button">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="like button"/>
                                                    <rect key="contentStretch" x="1" y="1" width="1" height="1"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="FWo-jg-xEQ"/>
                                                        <constraint firstAttribute="height" constant="44" id="Zl3-Nc-Jkh"/>
                                                    </constraints>
                                                    <state key="normal" title="Button"/>
...
                                <connections>
                                    <outlet property="delegate" destination="On0-w7-HRN" id="LAE-Si-QxF"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MpU-qf-rj0" userLabel="ButtonBack">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav back button white"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="WGl-Yj-ndP"/>
                                    <constraint firstAttribute="height" constant="48" id="hdv-hq-pSG"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
...
